--- a/index.html
+++ b/index.html
@@ -4,13 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Cynthia Ugwu Clone</title>
+    <title>Cynthia Ugwu • Product Designer Clone</title>
+    <!-- <link rel="icon" type="image/png" sizes="16x16" href="https://cynthiaugwu.com/images/cynthia.webp"> -->
+    <link rel="icon" type="image/png" sizes="32x32" href="https://cynthiaugwu.com/images/cynthia.webp">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div id="main">
         <div id="hero">
-            
+            <div id="nav">
+                <a href="#">Cynthia Ugwu</a>
+                <h4>MENU+</h4>
+            </div>
+
+            <div id="heading">
+                <h1>Product</h1>
+                <h1>Designer</h1>
+                <h5>Based in toronto</h5>
+            </div>
         </div>
     </div>
 </body>
