--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- <div id="main">
+    <div id="main">
         <div id="hero">
             <div id="nav">
                 <a href="#">Cynthia Ugwu</a>
@@ -55,10 +55,9 @@
                 <h5>available full time and freelance</h5>
                 <h5>work from sep '24</h5>
             </div>
-
-            </div> -->
+            </div> 
         
-        <!-- <div id="secondpage">
+        <div id="secondpage">
             <div class="elem">
                 <img src="./assets/hover images/lucid-motors.webp" alt="">
                 <h1>Lucid Motors</h1>
@@ -84,16 +83,52 @@
                 <h1>Somos</h1>
                 <h5>2023</h5>
             </div>
-        </div> -->
+            <div id="view">
+            <a href="#">View all work</a>
+            </div>
+        </div>
 
-        <!-- <div id="about">
+        <div id="scroller">
+            <div id="scrollimages">
+                <div class="scrolltrack">
+            <img src="./assets/scroller-logos/AVIS.svg" alt="">
+            <img src="./assets/scroller-logos/Baron.svg" alt="">
+            <img src="./assets/scroller-logos/Clover.svg" alt="">
+            <img src="./assets/scroller-logos/Comcast.svg" alt="">
+            <img src="./assets/scroller-logos/ETS.svg" alt="">
+            <img src="./assets/scroller-logos/Expedia.svg" alt="">
+            <img src="./assets/scroller-logos/Identity.svg" alt="">
+            <img src="./assets/scroller-logos/Lucid.svg" alt="">
+            <img src="./assets/scroller-logos/Microsoft.svg" alt="">
+            <img src="./assets/scroller-logos/NEOM.svg" alt="">
+            <img src="./assets/scroller-logos/NFL.svg" alt="">
+            <img src="./assets/scroller-logos/Toefl.svg" alt="">
+
+            <!-- duplicate here for infinite scroll effect -->
+            <img src="./assets/scroller-logos/AVIS.svg" alt="">
+            <img src="./assets/scroller-logos/Baron.svg" alt="">
+            <img src="./assets/scroller-logos/Clover.svg" alt="">
+            <img src="./assets/scroller-logos/Comcast.svg" alt="">
+            <img src="./assets/scroller-logos/ETS.svg" alt="">
+            <img src="./assets/scroller-logos/Expedia.svg" alt="">
+            <img src="./assets/scroller-logos/Identity.svg" alt="">
+            <img src="./assets/scroller-logos/Lucid.svg" alt="">
+            <img src="./assets/scroller-logos/Microsoft.svg" alt="">
+            <img src="./assets/scroller-logos/NEOM.svg" alt="">
+            <img src="./assets/scroller-logos/NFL.svg" alt="">
+            <img src="./assets/scroller-logos/Toefl.svg" alt="">
+                </div>
+            </div>
+        </div>
+
+        <div id="about">
             <img src="./assets/cynthia.webp" alt="">
             <div id="textabout">
                 <h5>(ABOUT ME)</h5>
                 <p>I'm a product and motion designer who loves creating things that are not just eye candy but also fix life's little hiccups. When I'm not glued to my computer like a robot or scribbling on my iPad, you might catch me leveling up in video games, snapping photos like a wannabe pro, or watching football because football is life. My design philosophy? Keep it snazzy, make it work, and sprinkle in a bit of fun. I'm the designer you want on your team if you want people to exclaim, "I need that in my life!".</p>
                 <a href="#">Let's talk</a>
             </div>
-        </div> -->
+        </div>
 
         
     </div>
