--- a/index.html
+++ b/index.html
@@ -130,7 +130,25 @@
             </div>
         </div>
 
-        
+        <div id="subscribe">
+            <h5>Oops, almost forget...</h5>
+            <a href="#">Subscribe to my youtube channel
+                <i class="ri-arrow-right-up-line"></i>
+            </a>
+        </div>
+
+        <div id="footer">
+            <div id="footerleft">
+                <h5>&copy; 2025</h5>
+                <h5>0:05 AM EST</h5>
+            </div>
+            <div id="footerright">
+                <a href="#">linkedin</a>
+                <a href="#">x/twitter</a>
+                <a href="#">instagram</a>
+                <a href="#">youtube</a>
+            </div>
+        </div>
     </div>
 </body>
 </html>
