--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     rel="stylesheet"/>
     <!-- css file link -->
     <link rel="stylesheet" href="styles.css">
+    <!-- locomotive scroll cdn  -->
+    <link rel="stylesheet" href="locomotive.css">
 </head>
 <body>
     <div id="main">
@@ -150,5 +152,9 @@
             </div>
         </div>
     </div>
+
+    
+    <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
